--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Test, hello there!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: [Andrew Long]</title>
+</head>
+<body>
+    <h1>[Andrew Long]</h1>
+    </body>
+</html>
