--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSCE 190: [Andrew Long]</title>
+        <title>CSCE 190: Andrew Long</title>
 </head>
 <body>
-    <h1>[Andrew Long]</h1>
+    <h1>Andrew Long</h1>
     </body>
 </html>
