--- a/index.html
+++ b/index.html
@@ -5,5 +5,19 @@
 </head>
 <body>
     <h1>Andrew Long</h1>
+    <div class="about">
+        <h2>About me</h2>
+        <p>[My mission is to create video games that entertain, inspire, and connect people across the globe. As I travel 
+the world, I aim to grow as a programmer and storyteller, turning imagination into interactive experiences.]</p>
+    </div>
+    <div class="skills">
+        <h2>Skills</h2>
+    </div>
+    <div class="projects">
+        <h2>Highlighted projects</h2>
+    </div>
+    <div class="contact">
+        <h2>Contact me</h2>
+    </div>
     </body>
 </html>
