--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSCE 190: Andrew Long</title>
+        <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Andrew Long</h1>
