--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
     </div>
     <div class="projects">
         <h2>Highlighted projects</h2>
+        <!-- Problem Statement Assignment -->
+        <section class="project">
+        <a href="files/Statement.pdf"><h3>Problem Statement</h3></a>
+        <a href="files/Statement.pdf"><img src="images/problem.png"></a>
+        <p>Residents in apartment complexes and neighborhoods often throw trash and recycling in the wrong bins because the rules are unclear, inconsistent, or not communicated in a visible way.</p>
+        </section>
     </div>
     <div class="contact">
         <h2>Contact me</h2>
