--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
         <p>Residents in apartment complexes and neighborhoods often throw trash and recycling in the wrong bins because the rules are unclear, inconsistent, or not communicated in a visible way.</p>
     </section>
 
+        <!--Affinity Diagram Assignment -->
+        <section class="project">
+            <a href="files/AffinityDiagram.pdf">
+                <h3>Affinity Diagram</h3>
+            </a>
+            <a href="files/AffinityDiagram.pdf">
+                <img src="images/AffinityDiagram.png">
+            </a>
+        <p>Infinity diagram showing the cycle of identifying recycling issues and improving solutions through app features, tech integration, community engagement, policy, and design.</p>
+        </section>
+
     </div>
     <div class="contact">
         <h2>Contact me</h2>
