--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
                 <h3>Affinity Diagram</h3>
             </a>
             <a href="files/AffinityDiagram.pdf">
-                <img src="images/AffinityDiagram.png" width="100" height="100">
+                <img src="images/AffinityDiagram.png">
             </a>
         <p>Infinity diagram showing the cycle of identifying recycling issues and improving solutions through app features, tech integration, community engagement, policy, and design.</p>
         </section>
