added Sketches Assignment

--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
                 <img src="images/AffinityDiagram.png">
             </a>
         <p>Infinity diagram showing the cycle of identifying recycling issues and improving solutions through app features, tech integration, community engagement, policy, and design.</p>
-        </section>
+    </section>
+
+        <!--Sketches Assignment-->
+        <section class="project">
+            <a href="files/Sketches_DOC.pdf">
+                <h3>Sketches</h3>
+            </a>
+            <a href="files/Sketches_DOC.pdf">
+                <img src="images/Sketches_IMG.png">
+            </a>
+        <p>Brief description about the sketches</p>
+    </section>
 
     </div>
     <div class="contact">
