--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
             <a href="files/Sketches_DOC.pdf">
                 <img src="images/Sketches_IMG.png">
             </a>
-        <p>Brief description about the sketches</p>
+        <p>Three wireframe scenarios showing a student scanning and sorting, a resident joining a recycling challenge, and an admin reviewing recycling data.</p>
     </section>
 
     </div>
