--- a/div_res.html
+++ b/div_res.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Resume</title>
+</head>
+<body>
+  <div class="header">
+    <h1>Andrew Long</h1>
+    <p>Email: nikkigaimes@gmail.com | GitHub: github.com/yourusername</p>
+  </div>
+
+  <div class="section">
+    <div class="section-title">Education</div>
+    <div class="section-content">
+      <p><strong>University of South Carolina – Columbia</strong> (June 2028)<br>
+      Bachelor of Science in Computer Info Systems · GPA: 3.0</p>
+      <p><strong>Orangeburg–Calhoun Technical College</strong> (June 2025)<br>
+      Completed 35 transferable credits · GPA: 3.1</p>
+    </div>
+  </div>
+
+  <div class="section">
+    <div class="section-title">Work Experience</div>
+    <div class="section-content">
+      <p><strong>Little Caesars – Eugene, OR</strong> (July 2019 – September 2019)<br>
+      <em>Cook</em></p>
+      <ul>
+        <li>Followed set processes to keep food quality consistent and meet safety standards.</li>
+        <li>Worked closely with team members to figure out each member’s best role in the kitchen.</li>
+        <li>Adapted quickly when things got hectic to keep customers happy and service on track.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="section">
+    <div class="section-title">Skills</div>
+    <div class="section-content">
+      <ul>
+        <li>Programming Languages: Java, HTML</li>
+        <li>Version Control / Hosting: Git, GitHub</li>
+        <li>IDEs: Eclipse, Visual Studio Code</li>
+        <li>Web Development Basics: HTML structure and styling</li>
+        <li>Problem-Solving: Debugging and troubleshooting code</li>
+      </ul>
+    </div>
+  </div>
+</body>
+</html>
 
