--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
     </div>
     <div class="skills">
         <h2>Skills</h2>
+        <span>
+            My resume: <a href="files/resume.pdf">PDF version</a>
+            | <a href="resume.html">HTML version</a>
+        </span>
     </div>
     <div class="projects">
         <h2>Highlighted projects</h2>
