--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
         <h2>Skills</h2>
         <span>
             My resume: <a href="files/resume.pdf">PDF version</a>
-            | <a href="resume.html">HTML version</a>
+            | <a href="div_res.html">HTML version</a>
         </span>
     </div>
     <div class="projects">
