added link to style.css

--- a/div_res.html
+++ b/div_res.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Resume</title>
+  <link rel="stylesheet" href="div_res_style.css">
 </head>
 <body>
   <div class="header">
