--- a/div_res.html
+++ b/div_res.html
@@ -13,9 +13,9 @@
   <div class="section">
     <div class="section-title">Education</div>
     <div class="section-content">
-      <p><strong>University of South Carolina - Columbia</strong>      June 2028<br>
+      <p><strong>University of South Carolina - Columbia</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;June 2028<br>
       Bachelor of Science in Computer Info Systems · GPA: 3.0</p>
-      <p><strong>Orangeburg - Calhoun Technical College</strong>       June 2025<br>
+      <p><strong>Orangeburg - Calhoun Technical College</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;June 2025<br>
       Completed 35 transferable credits     GPA: 3.1</p>
     </div>
   </div>
