--- a/div_res.html
+++ b/div_res.html
@@ -16,7 +16,7 @@
       <p><strong>University of South Carolina - Columbia</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;June 2028<br>
       Bachelor of Science in Computer Info Systems · GPA: 3.0</p>
       <p><strong>Orangeburg - Calhoun Technical College</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;June 2025<br>
-      Completed 35 transferable credits     GPA: 3.1</p>
+      Completed 35 transferable credits&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GPA: 3.1</p>
     </div>
   </div>
 
