--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
             My resume: <a href="files/CleanResume.pdf">PDF version</a>
             | <a href="div_res.html">HTML version</a>
         </span>
+        <img src="images/skills.png"
     </div>
     <div class="projects">
         <h2>Highlighted projects</h2>
