--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ the world, I aim to grow as a programmer and storyteller, turning imagination in
     </div>
     <div class="skills">
         <h2>Skills</h2>
-        <img src="images/Avatar.png" alt="Avatar">
+        <img src="images/Avatar.png">
         <span>
             My resume: <a href="files/CleanResume.pdf">PDF version</a>
             | <a href="div_res.html">HTML version</a>
